unpackaged/main/default/objects/Standing_Letter_of_Authorization__c/Standing_Letter_of_Authorization__c.object-meta.xml
<CustomObject>
    <label>Standing Letter of Authorization</label>
    <nameField>
        <displayFormat>SLOA-{0000000}</displayFormat>
        <label>Standing Letter of Authorization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Standing Letters of Authorization</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>