unpackaged/main/default/objects/Standing_Letter_of_Authorization__c/fields/Bank_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Type__c</fullName>
    <label>Bank Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>CORPCHK</fullName>
            </value>
            <value>
                <fullName>CORPSAV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>