unpackaged/main/default/objects/Standing_Letter_of_Authorization__c/fields/Delete_SLOA__c.field-meta.xml
<CustomField>
    <fullName>Delete_SLOA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete SLOA</label>
    <type>Checkbox</type>
</CustomField>