unpackaged/main/default/objects/Standing_Letter_of_Authorization__c/fields/Extended_Name__c.field-meta.xml
<CustomField>
    <fullName>Extended_Name__c</fullName>
    <formula>Moneylink_ABA_Bank_Name__c  + &quot; - &quot;  +  Moneylink_Bank_Account_Number__c + &quot; - &quot;  + TEXT(Frequency__c) + &quot; - &quot;  + TEXT(Type__c)</formula>
    <label>Extended Name</label>
    <type>Text</type>
</CustomField>