unpackaged/main/default/objects/Standing_Letter_of_Authorization__c/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Account</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipName>Standard_Letter_of_Authorizations</relationshipName>
    <type>Lookup</type>
</CustomField>