unpackaged/main/default/objects/Standing_Letter_of_Authorization__c/fields/Financial_Advisor_Team__c.field-meta.xml
<CustomField>
    <fullName>Financial_Advisor_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Advisor Team</label>
    <referenceTo>Financial_Advisor_Team__c</referenceTo>
    <relationshipLabel>Standing Letters of Authorization</relationshipLabel>
    <relationshipName>Standing_Letters_of_Authorization</relationshipName>
    <type>Lookup</type>
</CustomField>