unpackaged/main/default/objects/Standing_Letter_of_Authorization__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Last Business Day</fullName>
            </value>
            <value>
                <fullName>Direct Deposit</fullName>
            </value>
            <value>
                <fullName>Semi-Monthly</fullName>
            </value>
            <value>
                <fullName>ONREQST</fullName>
                <label>On Request</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>