unpackaged/main/default/objects/Standing_Letter_of_Authorization__c/fields/Journal_to_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Journal_to_Account_Id__c</fullName>
    <label>Journal to Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>