unpackaged/main/default/objects/Standing_Letter_of_Authorization__c/fields/Moneylink_ABA_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Moneylink_ABA_Bank_Name__c</fullName>
    <label>Moneylink ABA Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>