unpackaged/main/default/objects/Standing_Letter_of_Authorization__c/fields/Moneylink_Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Moneylink_Bank_Account_Number__c</fullName>
    <label>Moneylink Bank Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>