unpackaged/main/default/objects/Standing_Letter_of_Authorization__c/fields/Schwab_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Schwab_Account_Number__c</fullName>
    <label>Schwab Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>