unpackaged/main/default/objects/Standing_Letter_of_Authorization__c/fields/SLOA_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>SLOA_Created_Date__c</fullName>
    <label>SLOA Created Date</label>
    <type>Date</type>
</CustomField>