unpackaged/main/default/objects/Standing_Letter_of_Authorization__c/fields/Standing_Instructions_ID__c.field-meta.xml
<CustomField>
    <fullName>Standing_Instructions_ID__c</fullName>
    <label>Standing Instructions ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>