unpackaged/main/default/objects/Standing_Letter_of_Authorization__c/fields/State_Withholding__c.field-meta.xml
<CustomField>
    <fullName>State_Withholding__c</fullName>
    <label>State % Withholding</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>