unpackaged/main/default/objects/Standing_Letter_of_Authorization__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Moneylink</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Journal</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
            <value>
                <fullName>EFT standing instruction</fullName>
            </value>
            <value>
                <fullName>Journal Receipt standing instruction</fullName>
            </value>
            <value>
                <fullName>Journal Disbursement standing instruction</fullName>
            </value>
            <value>
                <fullName>Wire standing instruction</fullName>
            </value>
            <value>
                <fullName>Directed Payee Payment/Receipt (3rd party ACH)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>