unpackaged/main/default/objects/Standing_Letter_of_Authorization__c/fields/Wizard_Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Wizard_Financial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Account</label>
    <referenceTo>Financial_Account__c</referenceTo>
    <relationshipLabel>Standing Letters of Authorization</relationshipLabel>
    <relationshipName>Standing_Letters_of_Authorization</relationshipName>
    <type>Lookup</type>
</CustomField>