unpackaged/main/default/objects/Standing_Letter_of_Authorization__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Financial_Account__c</columns>
    <columns>Moneylink_ABA_Bank_Name__c</columns>
    <columns>Moneylink_Bank_Account_Name__c</columns>
    <columns>Moneylink_Bank_Account_Number__c</columns>
    <columns>Frequency__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>